# CouncilFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  pyproject.toml  readme.md
.claude/state/: architecture.md  logs.json  prd.md  project.json  tasks.json
.smoke/: full_live_smoke.py
docs/: ceremony-baseline-2026-04-20.json  ceremony-baseline-2026-04-20.md  claude-variant-smoke-report-2026-04-20.md  code-review-2026-04-18-solutions.md  code-review-2026-04-18.md  discuss-wait-smoke-report-2026-04-21.md  distribution.md  full-smoke-report-2026-04-19.md  git-history-audit-2026-04-19.md  integration.md  release-checklist.md  release-notes-0.1.0.md  release-notes-0.1.1.md  release-notes-0.1.2.md  release-notes-0.1.3.md  release-notes-0.1.4.md  release-notes-0.1.5.md  release-notes-0.1.6.md  release-notes-0.1.7.md  rfc-workflow-token-optimization.md  synthesizer-artifact-smoke-report-2026-04-20.md  token-opt-smoke-report-2026-04-20.md  token-report-2026-06-10.md  user-guide.zh-CN.md  workflow-optimizations-backlog.md
examples/go-web-smoke/: README.md
examples/go-web-smoke/backend/: server.py
examples/go-web-smoke/frontend/: app.js  index.html  style.css
scripts/: measure_ceremony_tokens.py
src/councilflow/: __init__.py
src/councilflow/cli/: __init__.py  app.py  delegate.py  delegation.py  discuss.py  discuss_wait.py  status.py  synthesize.py
src/councilflow/config/: loader.py  schema.py  when_eval.py
src/councilflow/controller/: convergence_evaluator.py  delegation_orchestrator.py  discussion_orchestrator.py  host_context.py  role_router.py  routing.py
tests/: conftest.py  test_alias_normalization.py  test_claude_adapter.py  test_cli_app.py  test_cli_delegate.py  test_cli_delegation.py  test_cli_discuss.py  test_cli_discuss_wait.py  test_cli_status.py  test_cli_synthesize.py  test_config_defaults_consistency.py  test_config_loader.py  test_config_schema.py  test_convergence_evaluator.py  test_delegation_orchestrator.py  test_discussion_orchestrator.py  test_gemini_controller.py  test_go_web_smoke.py  test_host_context.py  test_logging.py  test_mcp_policy.py  test_output_language.py  test_prompt_compaction.py  test_provider_adapters.py  test_provider_answer_selection.py  test_role_router.py  test_routing.py  test_runtime_probe.py  test_state_store.py  test_synthesizer_artifact_contract.py  test_when_eval.py  test_workflow_integration.py  test_workspace_overlay.py  test_workspace_symlinks.py
(+26 files in other folders)
