[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "councilflow"
version = "0.1.0"
description = "CLI-first, local-first, controller-aware sidecar for multi-model collaboration."
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<0.16",
]

[project.scripts]
council = "councilflow.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

