[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "councilflow"
version = "0.1.8"
description = "CLI-first, local-first, controller-aware sidecar for multi-model collaboration."
readme = "readme.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "SuperRedHat", email = "593030970@qq.com"},
]
urls = {Homepage = "https://github.com/SuperRedHat/CouncilFlow", Repository = "https://github.com/SuperRedHat/CouncilFlow", Issues = "https://github.com/SuperRedHat/CouncilFlow/issues"}
dependencies = [
    "pydantic>=2.12,<3.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "ruff>=0.15,<0.16",
]
openai = [
    "openai>=1.0,<2.0",
]

[project.scripts]
council = "councilflow.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
councilflow = ["templates/*.yaml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"
# Top-level scratch / debug scripts are not part of the shipped package.
# Keep them out of lint so untracked local probes do not block CI on ruff.
extend-exclude = [
    "repro_alias.py",
    "task_verification.py",
    "test_objective.py",
    "update_skills.py",
    "update_skills_review.py",
    "verify_active_gemini.py",
    "verify_alias.py",
    "verify_task.py",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
